configure server and add whitelist

--- a/server.properties
+++ b/server.properties
@@ -1,6 +1,6 @@
 op-permission-level=4
 allow-nether=true
-level-name=world
+level-name=fondo de bikini
 enable-query=false
 allow-flight=false
 announce-player-achievements=true
@@ -15,7 +15,7 @@ server-ip=
 max-tick-time=60000
 max-build-height=256
 spawn-npcs=true
-white-list=false
+white-list=true
 spawn-animals=true
 hardcore=false
 snooper-enabled=true
@@ -24,7 +24,7 @@ online-mode=true
 resource-pack=
 pvp=true
 difficulty=1
-enable-command-block=true
+enable-command-block=false
 player-idle-timeout=0
 gamemode=0
 max-players=20
@@ -32,7 +32,7 @@ spawn-monsters=true
 generate-structures=true
 view-distance=10
 spawn-protection=16
-motd=A Minecraft Server powered by Docker
+motd=La comunidad del taquillo
 generator-settings=
 rcon.password=
 max-world-size=29999984
