--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,22 +7,12 @@ services:
     ports:
       - "25565:25565"
     volumes:
-      - "mc:/data"
+      - ./data:/data
     environment:
       EULA: "TRUE"
-      CONSOLE: "false"
-      ENABLE_RCON: "true"
-      RCON_PASSWORD: "testing"
-      RCON_PORT: 28016
+      ENABLE_RCON: "false"
+      VERSION: "1.14.4"
+      MEMORY: "1G"
+      MAX_MEMORY: "3G"
     restart: always
-  rcon:
-    image: itzg/rcon
-    ports:
-      - "4326:4326"
-      - "4327:4327"
-    volumes:
-      - "rcon:/opt/rcon-web-admin/db"
 
-volumes:
-  mc:
-  rcon:
