--- a/server.properties
+++ b/server.properties
@@ -1,6 +1,6 @@
 op-permission-level=4
 allow-nether=true
-level-name=fondo de bikini
+level-name=world
 enable-query=false
 allow-flight=false
 announce-player-achievements=true
