--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       ENABLE_RCON: "false"
       VERSION: "1.14.4"
       MEMORY: "1G"
+      GUI: "false"
       MAX_MEMORY: "1G"
     restart: always
 
